--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@paypal/react-paypal-js": "^8.7.0",
     "@reduxjs/toolkit": "^2.3.0",
+    "dotenv": "^16.4.5",
     "firebase": "^11.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
